@@ -4,20 +4,45 @@ import com.pms.audit.Auditable;
 import com.pms.dto.employee.AvailableActionsDTO;
 import com.pms.dto.employee.CycleSummaryDTO;
 import com.pms.dto.employee.PaginationDTO;
-import com.pms.dto.employee.kpi.*;
-import com.pms.dto.employee.kpi.KpiResponsesDTO.*;
-import com.pms.entity.*;
+import com.pms.dto.employee.kpi.KpiResponsesDTO.HistoricalKpiResultsResponseDTO;
+import com.pms.dto.employee.kpi.KpiResponsesDTO.KpiConfirmationRequestDTO;
+import com.pms.dto.employee.kpi.KpiResponsesDTO.KpiConfirmationResponseDTO;
+import com.pms.dto.employee.kpi.KpiResponsesDTO.KpiResultResponseDTO;
+import com.pms.dto.employee.kpi.KpiResponsesDTO.KpiStandardsResponseDTO;
+import com.pms.dto.employee.kpi.KpiResultDTO;
+import com.pms.dto.employee.kpi.KpiResultSummaryDTO;
+import com.pms.dto.employee.kpi.KpiStandardDTO;
+import com.pms.entity.Kpi;
+import com.pms.entity.KpiAssignment;
+import com.pms.entity.KpiProgressSnapshot;
+import com.pms.entity.KpiResultConfirmation;
+import com.pms.entity.PerformanceCycle;
+import com.pms.entity.PerformanceReview;
+import com.pms.entity.User;
 import com.pms.entity.enums.CycleStatus;
 import com.pms.exception.ConflictException;
 import com.pms.exception.ForbiddenException;
 import com.pms.exception.NotFoundException;
-import com.pms.repository.*;
+import com.pms.repository.AppealRepository;
+import com.pms.repository.KpiAssignmentRepository;
+import com.pms.repository.KpiProgressSnapshotRepository;
+import com.pms.repository.KpiRepository;
+import com.pms.repository.KpiResultConfirmationRepository;
+import com.pms.repository.PerformanceCycleRepository;
+import com.pms.repository.PerformanceReviewRepository;
+import com.pms.repository.UserRepository;
 import com.pms.service.employee.EmployeeKpiService;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.OffsetDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
@@ -57,7 +82,7 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
                                                 "No performance review found for current cycle"));
 
         List<Kpi> kpis = kpiRepository.findByCycleIdAndDeletedAtIsNull(cycle.getId());
-        List<UUID> kpiIds = kpis.stream().map(Kpi::getId).collect(Collectors.toList());
+        List<UUID> kpiIds = kpis.stream().map(Kpi::getId).toList();
         List<KpiAssignment> assignments =
                 kpiAssignmentRepository.findByUserIdAndKpiIdIn(userId, kpiIds);
 
@@ -102,7 +127,7 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
                                                             .build())
                                             .build();
                                 })
-                        .collect(Collectors.toList());
+                        .toList();
 
         User user = userRepository.findById(userId).orElse(null);
         KpiResultSummaryDTO.EmployeeSummaryDTO employeeDTO = buildEmployeeSummaryDTO(user);
@@ -159,16 +184,14 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
         }
 
         List<Kpi> kpis = kpiRepository.findByCycleIdAndDeletedAtIsNull(cycle.getId());
-        List<UUID> kpiIds = kpis.stream().map(Kpi::getId).collect(Collectors.toList());
+        List<UUID> kpiIds = kpis.stream().map(Kpi::getId).toList();
         List<KpiAssignment> assignments =
                 kpiAssignmentRepository.findByUserIdAndKpiIdIn(userId, kpiIds);
         Map<UUID, KpiAssignment> assignmentMap =
                 assignments.stream()
                         .collect(Collectors.toMap(KpiAssignment::getKpiId, Function.identity()));
         List<Kpi> assignedKpis =
-                kpis.stream()
-                        .filter(k -> assignmentMap.containsKey(k.getId()))
-                        .collect(Collectors.toList());
+                kpis.stream().filter(k -> assignmentMap.containsKey(k.getId())).toList();
 
         double totalWeightedScore = 0.0;
         List<KpiResultDTO> kpiResults = new ArrayList<>();
@@ -422,7 +445,7 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
                             .sorted(
                                     Comparator.comparing(PerformanceCycle::getHrReviewEnd)
                                             .reversed())
-                            .collect(Collectors.toList());
+                            .toList();
 
             // apply q filter on cycle name
             if (q != null && !q.isBlank()) {
@@ -433,7 +456,7 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
                                         c ->
                                                 c.getName() != null
                                                         && c.getName().toLowerCase().contains(lq))
-                                .collect(Collectors.toList());
+                                .toList();
             }
 
             int total = historicalCycles.size();
@@ -470,7 +493,7 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
                                                                 : null)
                                                 .build();
                                     })
-                            .collect(Collectors.toList());
+                            .toList();
 
             int totalPages = total == 0 ? 1 : (int) Math.ceil((double) total / size);
             PaginationDTO pagination =
@@ -512,7 +535,7 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
                                                     "No KPI review found for cycle"));
 
             List<Kpi> kpis = kpiRepository.findByCycleIdAndDeletedAtIsNull(cycle.getId());
-            List<UUID> kpiIds = kpis.stream().map(Kpi::getId).collect(Collectors.toList());
+            List<UUID> kpiIds = kpis.stream().map(Kpi::getId).toList();
             List<KpiAssignment> assignments =
                     kpiAssignmentRepository.findByUserIdAndKpiIdIn(userId, kpiIds);
             Map<UUID, KpiAssignment> assignmentMap =
@@ -548,7 +571,7 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
                                                                 .build())
                                                 .build();
                                     })
-                            .collect(Collectors.toList());
+                            .toList();
 
             User user = userRepository.findById(userId).orElse(null);
             KpiResultSummaryDTO result =
@@ -574,12 +597,18 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
 
     private String computeKpiResultStatus(
             PerformanceCycle cycle, PerformanceReview review, UUID userId) {
-        if (cycle.getResultsPublishedAt() == null) return "not_published";
-        if (kpiResultConfirmationRepository.findByReviewId(review.getId()).isPresent())
+        if (cycle.getResultsPublishedAt() == null) {
+            return "not_published";
+        }
+        if (kpiResultConfirmationRepository.findByReviewId(review.getId()).isPresent()) {
             return "confirmed";
-        if (appealRepository.findByReviewId(review.getId()).isPresent()) return "disputed";
-        if (cycle.getStatus() == CycleStatus.COMPLETED || cycle.getStatus() == CycleStatus.CLOSED)
+        }
+        if (appealRepository.findByReviewId(review.getId()).isPresent()) {
+            return "disputed";
+        }
+        if (cycle.getStatus() == CycleStatus.COMPLETED || cycle.getStatus() == CycleStatus.CLOSED) {
             return "finalized";
+        }
         return "pending_confirmation";
     }
 
@@ -635,7 +664,9 @@ public class EmployeeKpiServiceImpl implements EmployeeKpiService {
     }
 
     private KpiResultSummaryDTO.EmployeeSummaryDTO buildEmployeeSummaryDTO(User user) {
-        if (user == null) return null;
+        if (user == null) {
+            return null;
+        }
         return KpiResultSummaryDTO.EmployeeSummaryDTO.builder()
                 .userId(user.getId().toString())
                 .name(user.getFullName())
